02/05/2023
Submitted - day16 - Assignment - Find good day

03/05/2023
Submitted - day16 - Homework - Single number 3

04/05/2023
Submitted - day16 - Homework - Sub array with bitwise OR 1

05/05/2023
Submitted - day16 - Homework - Unset x bit from right

06/05/2023
Submitted - day16 - Homework - Bit Compression
Submitted - day12 - Assignment - Matrix Multiplication

07/05/2023
Submitted - day18 - Assignment - divisible by 8

08/05/2023
Submitted - day18 - Assignment - A, B modulo

09/05/2023
Submitted - day18 - Assignment - mod String

10/05/2023
Submitted - day18 - Homework - Concatenate 3 nos

11/05/2023
Submitted - day18 - Homework - Overlapping rectangle

12/05/2023
Submitted - day18 - Homework - LCM and leap year 3
